--- a/job/Bytedance/main.tex
+++ b/job/Bytedance/main.tex
@@ -18,8 +18,7 @@
     \title[Gaussian Hartree-Fock]{Adaptive Gaussian basis for quantum chemistry calculation}
 \author[J. Zhao]{Jiaxi Zhao (NUS)\\joint work with Doc. Min Lin (SAIL)}
 \date[\today]{\today\\
-Joint FDU-NUS-ZJU
-PhD Forum in Mathematics}
+Job talk \@ Bytedance}
 \begin{document}
 \par \setlength{\parindent}{2em}
 
